--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>タキスポ 2025</title>
+  <title>タキ★スポ2025　</title>
   <link href="https://fonts.googleapis.com/css2?family=Yusei+Magic&display=swap" rel="stylesheet">
   <style>
     body {
@@ -65,7 +65,7 @@
 <body>
   <header>
     <h1>🎉 タキスポ2025 🎉</h1>
-    <p>テーマ：<strong>応援</strong>！みんなで盛り上がろう！</p>
+    <p>テーマ：<strong>熱い声援をPowerに変えて！Victory Roadを突き進め！</strong></p>
   </header>
 
   <section class="section info">
